--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -52,29 +52,15 @@ body {
     font-family: "Rock Salt", cursive;
     text-shadow: 0px 0px 0px 5px grey;
 
-#logo{
-    padding-top: 70px;
-    font-size: 5.0em;
-    color: black;
-    font-family: 'Rock Salt', cursive;
-    margin-bottom: 50px;
 }
 
-#bigLogo{
-    margin-top: 100px;
-    font-size: 9.0em;
-    font-family: "Rock Salt", cursive;
-    text-shadow: 0px 0px 0px 5px grey;
-
-}
-
-#headlogo{
+#headlogo {
     background-color: darkgray;
     font-family: "Rock Salt", cursive;
     height: 300px;
 }
 
-#navlogo{
+#navlogo {
     font-family: "Rock Salt", cursive;
     font-size: 1.0em;
     font-weight: 700;
@@ -83,7 +69,7 @@ body {
     margin-left: 20px;
 }
 
-.pageLogo{
+.pageLogo {
     font-family: "Rock Salt", cursive;
     margin-left: 25px;
     margin-top: 50px;
@@ -95,7 +81,7 @@ table {
     border-collapse: collapse;
 }
 
-.xs{
+.xs {
     text-align: left;
     font-size: 0.8rem;
 }
@@ -183,43 +169,6 @@ ol {
 .review-tr {
     text-align: center;
 }
-.slidecontainer {
-    width: 50%;
-}
-
-.slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 10px;
-    border-radius: 5px;
-    background: #A9A9A9;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-}
-
-.slider:hover {
-    opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background: #161616;
-    cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background: #161616;
-    cursor: pointer;
-}
 
 .slidecontainer {
     width: 50%;
@@ -265,7 +214,7 @@ ol {
     background-color: white;
 }
 
-#navbar{
+#navbar {
     background-color: darkgray;
     height: 70px;
 }
@@ -293,12 +242,12 @@ ol {
     margin-left: 20%;
 }
 
-#searchType{
+#searchType {
     margin: 10px;
 }
 
 
-#navbar_right{
+#navbar_right {
     margin-top: 7px;
     display: inline;
     float: right;
@@ -311,20 +260,15 @@ ol {
     height: 250px;
 }
 
-.user{
+.user {
     display: inline;
     text-decoration: black;
     margin-left: 10px;
     margin-right: 10px;
 }
 
-#memberInfo{
+#memberInfo {
     color: darkgrey;
-}
-
-
-#pagebox{
-    width: 95%;
 }
 
 
@@ -335,7 +279,7 @@ ol {
 
 #logoutbtn {
     /*margin-top: 7px;*/
-    background-color: rgba( 255, 255, 255, 0 );
+    background-color: rgba(255, 255, 255, 0);
     color: grey;
     margin-top: 5px;
     margin-left: 7px;
@@ -373,7 +317,8 @@ ol {
 #detailbox {
     margin-bottom: 50px;
 }
-#brandname{
+
+#brandname {
     text-align: left;
     display: block;
 }
@@ -418,14 +363,6 @@ ol {
     height: 40px;
     border: 1px solid lightgrey;
 }
-.color_box{
-    text-align: center;
-}
-.color_square{
-    width: 35px;
-    height: 35px;
-    margin-right: 5%;
-}
 
 .color_box {
     text-align: center;
@@ -451,11 +388,7 @@ ol {
     margin-right: 20px;
 }
 
-#codybox{
-    margin-right: 20px;
-}
-
-#cody_info{
+#cody_info {
     width: 450px;
     text-align: center;
     margin-left: 5%;
@@ -463,7 +396,7 @@ ol {
 }
 
 
-#product_info{
+#product_info {
     margin-top: 100px;
     margin-left: 5%;
     text-align: left;
@@ -487,17 +420,17 @@ ol {
     margin-left: 10%;
 }
 
-#likeitem_div{
+#likeitem_div {
     padding-left: 80px;
     padding-right: 80px;
 }
 
-.col-4{
+.col-4 {
     max-width: 350px;
     margin-bottom: 20px;
 }
 
-#likeitem_imgbox{
+#likeitem_imgbox {
     display: inline;
     margin: 15px;
     width: 210px;
@@ -506,32 +439,32 @@ ol {
 
 }
 
-#likeitem_img{
+#likeitem_img {
     margin-left: 60px;
     display: block;
     border: 1px solid darkgrey;
     border-radius: 100px;
     width: 200px;
-    height:200px;
+    height: 200px;
     text-align: center;
 }
 
-#likeitem_info{
+#likeitem_info {
     text-align: left;
     width: 210px;
 }
 
-#likeitem_name{
+#likeitem_name {
     margin-top: 15px;
     margin-left: 60px;
     width: 50px;
 }
 
-#likeitem_price{
+#likeitem_price {
     margin-left: 60px;
 }
 
-#buyandcartbtn{
+#buyandcartbtn {
     margin-top: 20px;
 }
 
@@ -552,26 +485,26 @@ ol {
     display: inline;
 }
 
-#cart_table{
+#cart_table {
     text-align: center;
     width: 70%;
     margin-left: 15%;
 }
 
-#cart_minus{
+#cart_minus {
     display: inline;
 }
 
-#cartMinusBtn{
+#cartMinusBtn {
     color: black;
     background: none;
 }
 
-#minus_icon{
+#minus_icon {
     background: none;
 }
 
-#like, #wr-review{
+#like, #wr-review {
     padding: 10px;
 }
 
@@ -590,8 +523,7 @@ ol {
 }
 
 
-
-#likelist_container{
+#likelist_container {
     text-align: center;
 }
 
@@ -605,28 +537,97 @@ ol {
     width: 800px;
 }
 
-#reivewInput{
+#reivewInput {
     width: 600px;
     height: 100px;
     margin: 15px 15px 15px -10px;
 }
 
-.likeListForCody{
+.likeListForCody {
     text-align: center;
     width: 900px;
     height: 300px;
 }
 
-.likeList{
+.likeList {
     text-align: center;
 }
 
-.codyContainer{
+.codyContainer {
     text-align: center;
     height: 900px;
     display: inline;
 }
-.pagetitle{
+
+.pagetitle {
     text-align: left;
     margin-left: 100px;
+}
+
+.codyArea {
+    class: row;
+    position: relative;
+    height: 400px;
+    width: 400px;
+    background-color: #F8EAC3;
+}
+
+
+.bottomCody {
+    position: absolute;
+    top: 20px;
+    left: 160px;
+    width: 60%;
+}
+
+.topCody {
+    position: absolute;
+    top: 20px;
+    left: 35px;
+    width: 50%;
+}
+
+.outerCody {
+    position: absolute;
+    top: 120px;
+    left: 95px;
+    width: 50%;
+}
+
+.shoesCody {
+    position: absolute;
+    top: 245px;
+    left: 215px;
+    width: 30%;
+}
+
+.accCody {
+    position: absolute;
+    top: 210px;
+    left: 10px;
+    width: 30%;
+}
+
+/*올빼미캐러셀 네비*/
+.owl-nav, .owl-dots {
+    display: block;
+    text-align: center;
+}
+
+.owl-nav .owl-prev, .owl-nav .owl-next {
+    display: inline-block;
+    margin: 5px;
+}
+
+.owl-dots .owl-dot {
+    display: inline-block;
+    background-color: #ccc;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin: 5px;
+}
+
+.owl-dots .active {
+    background-color: #666;
 }
