Revert "4/6 12:47 update script"
This reverts commit e4cc1613a067914eef6d593eec0370fb22176a7f.

--- a/src/main/resources/templates/common_fragments.html
+++ b/src/main/resources/templates/common_fragments.html
@@ -76,10 +76,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a id="navp_right" class="nav-link" th:href="@{/daily-recommend}" sec:authorize="!isAuthenticated()">Weather</a>
-                </li>
-                <li class="nav-item">
-                    <a id="navp_right" class="nav-link" th:href="@{/daily-recommend}" sec:authorize="isAuthenticated()">Weather</a>
+                    <a id="navp_right" class="nav-link" th:href="@{/weather/index}" sec:authorize="!isAuthenticated()">Weather</a>
                 </li>
 
                 <li class="nav-item">
