--- a/src/main/resources/templates/view/daily-recommend.html
+++ b/src/main/resources/templates/view/daily-recommend.html
@@ -7,6 +7,11 @@
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 <div layout:fragment="content" class="container" style="background-color: #FFFFFF;">
+
+    <!-- bootstrap 5.0.0-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+
     <div class="container">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
@@ -21,39 +26,40 @@
             }
         </style>
 
+        <h1>&nbsp</h1>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
         <!--현재 날씨-->
         <div class="row">
-            <h1> </h1>
-            <!--날씨 아이콘-->
-            <div id="loadWeatherIcon">....</div>
-            <p>&nbsp</p>
-            <!--현재 온도-->
-            <span id="loadWeather">현재 날씨 로드중...</span>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <!--날씨 아이콘-->
+                <div id="loadWeatherIcon"></div>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+        <p>&nbsp</p>
+        <!--현재 온도-->
+        <div class="row">
+            <span id = "loadWeather">
+                <div class="spinner-border text-primary" role="status"></div>
+            </span>
+        </div>
+
+        <div class="row">
             <p>&nbsp</p>
             <!--시계-->
             <span id="clock">00:00</span>
-            <hr style="color:#FFFFFF;">
-            <!--현위치 주소-->
-            <span id="full_address">현재 위치 로드중...</span>
-
-
-<!--            <div th:each="weather:${currentTemperature}">-->
-<!--                <span id="weather_view1" th:text="${weather.localWeather}" ></span>-->
-<!--                <span id="weather_view2" th:text="${weather.meridiem}  " ></span>-->
-<!--                <span id="weather_view3" th:text="${weather.temperature}"></span>-->
-<!--            </div>-->
-<!--            <div th:each="clothes_outer:${outer}">-->
-<!--                <span th:text="${clothes_outer.url}"></span>-->
-<!--            </div>-->
-            <h1> </h1>
-<!--            <h1>fas fa-cloud-rain</h1>-->
-
-<!--            <i class='fas fa-cloud-rain'></i>-->
-<!--            <i class='fas fa-cloud-rain' style='font-size:24px'></i>-->
-<!--            <i class='fas fa-cloud-rain' style='font-size:36px'></i>-->
-<!--            <i class='fas fa-cloud-rain' style='font-size:48px;color:red'></i>-->
         </div>
-<hr style="color: #FFFFFF">
+        <hr style="color:#FFFFFF;">
+
+        <!--현위치 주소-->
+        <div class="row">
+            <span id="full_address">현재 위치 로드중...</span>
+            <h1> </h1>
+        </div>
+
+        <hr style="color: #FFFFFF">
         <div class="row">
             <h1> </h1>
             <div class="col-md-2"></div>
@@ -76,11 +82,11 @@
                             <img th:src="@{${bottom.mainUrl}}" class="d-block w-100" alt="3번 이미지">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" style="background-color: whitesmoke" type="button" onclick="$('#carouselExampleIndicators').carousel('prev')" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <button class="carousel-control-prev" style="background-color: #FFFFFF" type="button" onclick="$('#carouselExampleIndicators').carousel('prev')" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" style="background-color: whitesmoke" onclick="$('#carouselExampleIndicators').carousel('next')" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" style="background-color: #FFFFFF" onclick="$('#carouselExampleIndicators').carousel('next')" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
@@ -88,140 +94,90 @@
             </div>
             <div class="col-md-2"></div>
         </div>
-<hr>
+        <hr>
         <div class="row">
-            <h2>요일별 날씨</h2>
-<!--            &lt;!&ndash;지역 날씨 검색&ndash;&gt;-->
-<!--            <div class="row">-->
-<!--                <div class="col-md-2"></div>-->
-<!--                <div class="col-md-8">-->
-<!--                    <label for="city"><b>City :</b></label>-->
-<!--                    <input class="w-25" id="city" type="text" placeholder="검색하고 싶은 도시를 입력해주세요.">-->
-<!--                    <div>-->
-<!--                        <button type="button" class="btn btn-light" id="btn-weatherList">조회</button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-md-2"></div>-->
-<!--            </div>-->
-            <!--현재위치 조회 버튼-->
-            <div class="row">
-                <div class="col-md-4">
-                    <button id="locationBtn" class="w-10 btn btn-dark btn">Search my location</button>
-                </div>
-                <div class="col-md-4">
-                </div>
-                <div class="col-md-4">
-                </div>
-            </div>
-            <table class="table table-horizontal table-bordered">
-                <thead class="thead-strong">
-                <tr align="center">
-                    <th>날짜</th>
-<!--                    <th>지역</th>-->
-                    <th>예보</th>
-                    <th>오전/오후</th>
-                    <th>온도</th>
-                </tr>
-                </thead>
-                <tbody id="weatherList">
-                <tr th:each="weather:${weatherList}" align="center">
-                    <td th:text="${weather.baseDate}"></td>
-<!--                    <td th:text="${weather.city}"></td>-->
-                    <td th:text="${weather.localWeather}"></td>
-                    <td th:text="${weather.meridiem}"></td>
-                    <td th:text="${weather.temperature}"></td>
-                </tr>
-                </tbody>
-            </table>
 
         </div>
-
-
-    </div>
-
-    <!--시계 스크립트-->
-    <script>
-        var clockTarget = document.getElementById("clock");
-        function clock() {
-            var date = new Date();
-            var month = date.getMonth();
-            var clockDate = date.getDate();
-            var day = date.getDay();
-            var week = ['일', '월', '화', '수', '목', '금', '토'];
-            var hours = date.getHours();
-            var minutes = date.getMinutes();
-            var seconds = date.getSeconds();
-            clockTarget .innerText = `${month+1}월 ${clockDate}일 ${week[day]}요일` +
-                `${hours < 10 ? `0${hours}` : hours}:${minutes < 10 ? `0${minutes }`  : minutes }:${seconds < 10 ? `0${seconds }`  : seconds }`;
-            // 월은 0부터 1월이기때문에 +1일
-            // 시간 분 초는 한자리수이면 시계가 어색해보일까봐 10보다 작으면 앞에0을 붙혀주는 작업을 3항연산으로
-        }
-        function init() {
-            clock();
+        <!--시계 스크립트-->
+        <script>
+            var clockTarget = document.getElementById("clock");
+            function clock() {
+                var date = new Date();
+                var month = date.getMonth();
+                var clockDate = date.getDate();
+                var day = date.getDay();
+                var week = ['일', '월', '화', '수', '목', '금', '토'];
+                var hours = date.getHours();
+                var minutes = date.getMinutes();
+                var seconds = date.getSeconds();
+                clockTarget .innerText = `${month+1}월 ${clockDate}일 ${week[day]}요일` +
+                    `${hours < 10 ? `0${hours}` : hours}:${minutes < 10 ? `0${minutes }`  : minutes }:${seconds < 10 ? `0${seconds }`  : seconds }`;
+                // 월은 0부터 1월이기때문에 +1일
+                // 시간 분 초는 한자리수이면 시계가 어색해보일까봐 10보다 작으면 앞에0을 붙혀주는 작업을 3항연산으로
+            }
+            function init() {
+                clock();
 // 최초에 함수를 한번 실행시켜주고
-            setInterval(clock, 1000);
+                setInterval(clock, 1000);
 // setInterval이라는 함수로 매초마다 실행
 // 1000 = 1초
-        }
-        init();
-    </script>
-    <!--현재 위치값(좌표,주소값) 스크립트 -->
-    <script>
-        const KEY ="AIzaSyBRIdueEX0Qeqz8Wyztxks_rSof_IdTNWM";
+            }
+            init();
+        </script>
+        <!--현재 위치값(좌표,주소값) 스크립트 -->
+        <script>
+            const KEY ="AIzaSyBRIdueEX0Qeqz8Wyztxks_rSof_IdTNWM";
             let url;
             let city;
             let city_address;
             let city_adress2;
             var full_address = document.getElementById("full_address")
 
-        navigator.geolocation.getCurrentPosition(function(pos) {
-            var latitude = pos.coords.latitude;
-            var longitude = pos.coords.longitude;
-            url = "https://maps.googleapis.com/maps/api/geocode/json?latlng="+latitude+","+longitude+"&key="+KEY;
+            navigator.geolocation.getCurrentPosition(function(pos) {
+                var latitude = pos.coords.latitude;
+                var longitude = pos.coords.longitude;
+                url = "https://maps.googleapis.com/maps/api/geocode/json?latlng="+latitude+","+longitude+"&key="+KEY;
 
-            console.log("lat: "+latitude+", lng:"+longitude);
+                console.log("lat: "+latitude+", lng:"+longitude);
 
-            fetch(url)
-                .then(response => response.json())
-                .then(data => {
-                    //console.log(data);
-                    let parts = data.results[0].formatted_address
-                    city = parts.split(" ")[1];
-                    city_address = parts.split(" ")[2]; // ex) 마포구
-                    city_adress2 = parts.split(" ")[3]; // ~~1가
-                    full_address.innerText = city + " " + city_address + " " +city_adress2;
-                    console.log(city+" fetch");
+                fetch(url)
+                    .then(response => response.json())
+                    .then(data => {
+                        //console.log(data);
+                        let parts = data.results[0].formatted_address
+                        city = parts.split(" ")[1];
+                        city_address = parts.split(" ")[2]; // ex) 마포구
+                        city_adress2 = parts.split(" ")[3]; // ~~1가
+                        full_address.innerText = city + " " + city_address + " " +city_adress2;
+                        console.log(city+" fetch");
 
-                    $("#locationBtn").click(function() {
-                        window.location.href = '/daily-recommend?city=' + city;//
+                        $("#locationBtn").click(function() {
+                            window.location.href = '/daily-recommend?city=' + city;//
+                        });
                     });
-                });
-        });
-     //   });
-     //   $("#locationBtn").click(function(){
-     //        e.preventDefault();
-     //        console.log(city+" ajax");
-     //        let geolocation = {city};
-     //        $.ajax({
-     //            url : "/daily-recommend",
-     //            type : "GET",
-     //            data : geolocation,
-     //            success : function(data) {
-     //                // alert(data);
-     //            },
-     //        })//ajax
-     //   // });
-     //    });
+            });
+            //   });
+            //   $("#locationBtn").click(function(){
+            //        e.preventDefault();
+            //        console.log(city+" ajax");
+            //        let geolocation = {city};
+            //        $.ajax({
+            //            url : "/daily-recommend",
+            //            type : "GET",
+            //            data : geolocation,
+            //            success : function(data) {
+            //                // alert(data);
+            //            },
+            //        })//ajax
+            //   // });
+            //    });
+        </script>
 
-
-    </script>
-
-
-    <script>
-        //openWeatherMap 으로 오늘 실시간 날씨 + 아이콘 받기
-        const OpenWeatherKey = "32dfb5f4525c5b244a15ba405f09c370";
-        var currentWeather = document.getElementById("loadWeather");
-        var loadWeatherIcon = document.getElementById("loadWeatherIcon");
+        <script>
+            //openWeatherMap 으로 오늘 실시간 날씨 + 아이콘 받기
+            const OpenWeatherKey = "32dfb5f4525c5b244a15ba405f09c370";
+            var currentWeather = document.getElementById("loadWeather");
+            var loadWeatherIcon = document.getElementById("loadWeatherIcon");
 
             navigator.geolocation.getCurrentPosition(function (pos) {
                 var latitude = pos.coords.latitude;
@@ -232,7 +188,7 @@
                 fetch(openWeatherUrl)
                     .then(response => response.json())
                     .then(data => {
-                       // console.log(data);
+                        // console.log(data);
                         console.log("현재온도 : "+ (data.main.temp- 273.15) );
                         console.log("현재습도 : "+ data.main.humidity);
                         console.log("날씨 : "+ data.weather[0].main );
@@ -262,9 +218,6 @@
                                 loadWeatherIcon.innerHTML="<i class='fas fa-cloud fa-5x'></i>"
                                 break;
                             }
-                            // case "broken clouds":{
-                            //     loadWeatherIcon.innerHTML="<i class='wi wi-cloudy' height='230' width='280'></i>"
-                            // }
                             case "shower rain":{
                                 loadWeatherIcon.innerHTML="<i class='fas fa-cloud-showers-heavy fa-5x'></i>"
                                 break;
@@ -285,52 +238,12 @@
                                 loadWeatherIcon.innerHTML="<i class='fas fa-smog fa-5x'></i>"
                                 break;
                             }
-
                         }
-                        // loadWeatherIcon.innerHTML="<img src='"+ icon+"' height='230' width='280'>"
-
-
                     });
             });
+        </script>
 
-    </script>
-
-
+    </div>
 </div>
-</div>
-<!--<script>-->
-<!--    var main = {-->
-<!--        init : function () {-->
-<!--            var _this = this;-->
-<!--            $('#btn-weatherList').on('click', function () {-->
-<!--                _this.weatherList();-->
-<!--            });-->
-<!--        },-->
-<!--        weatherList : function () {-->
-<!--            var data = {-->
-<!--                baseDate: $('#baseDate').val(),-->
-<!--                meridiem: $('#meridiem').val(),-->
-<!--                city: $('#city').val(),-->
-<!--                temperature: $('#temperature').val(),-->
-<!--                localWeather: $('#localWeather').val()-->
-<!--            };-->
-<!--            $.ajax({-->
-<!--                type: 'get',-->
-<!--                url: '/weather/weatherList?city='+data.city,-->
-<!--                // dataType: 'json',-->
-<!--                // contentType: 'application/json; charset=utf-8',-->
-<!--                // data: JSON.stringify(data),-->
-<!--                cache: false-->
-<!--            }).done(function (fragment) {-->
-<!--                $('#weatherList').replaceWith(fragment);-->
-<!--                alert("날씨 조회에 성공했습니다.")-->
-<!--            }).fail(function (error) {-->
-<!--                alert(JSON.stringify(error));-->
-<!--            });-->
-<!--        }-->
-<!--    };-->
-<!--    main.init();-->
-
-<!--</script>-->
 
 </html>
