--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -21,11 +21,11 @@ body {
     text-align: center;
 }
 
-.lead{
+.lead {
     color: white;
 }
 
-#header{
+#header {
     background-color: white;
 }
 
@@ -38,8 +38,7 @@ body {
 }
 
 
-
-#logo{
+#logo {
     padding-top: 70px;
     font-size: 5.0em;
     color: black;
@@ -55,7 +54,7 @@ body {
 
 }
 
-#headlogo{
+#headlogo {
     background-color: darkgray;
     font-family: "Rock Salt", cursive;
     height: 300px;
@@ -86,7 +85,7 @@ table {
     border-collapse: collapse;
 }
 
-.xs{
+.xs {
     text-align: left;
     font-size: 0.8rem;
 }
@@ -106,11 +105,10 @@ h1 {
     font-size: 4.0em;
     color: white;
     font-family: 'Oi', cursive;
-    text-shadow:
-            -1px -1px 0 #000,
-            1px -1px 0 #000,
-            -1px 1px 0 #000,
-            1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 h2 {
@@ -129,7 +127,7 @@ h5 {
     font-size: 1.6em;
 }
 
-h6{
+h6 {
     font-size: 1.4em;
     font-weight: 500;
 }
@@ -137,16 +135,22 @@ h6{
 p {
     font-size: 1.4em;
 }
+
 .banner {
     text-align: center;
     color: gray;
 }
+
 .container {
     max-width: 1500px;
 }
 
-li{
-    list-style:none;
+li {
+    list-style: none;
+}
+
+ol {
+    list-style: none;
 }
 
 ol{
@@ -222,24 +226,51 @@ ol{
     height: 200px;
 }
 
-.codybox {
-    border: 1px solid grey;
-    display: inline;
-    width: 100px;
-    height: 100px;
-    margin: 20px;
-}
 
-.outerimgbox , .topimgbox,  .bottomimgbox,  .accimgbox,  .shoesimgbox {
+.outerimgbox, .topimgbox, .bottomimgbox, .accimgbox, .shoesimgbox {
 
     /*writing-mode:vertical-lr;*/
     text-align: center;
     width: 200px;
     height: 200px;
+    display: inline;
 }
 
-.vertical-data{
-    writing-mode:vertical-lr
+#reviewHeadDiv, #reviewFragDiv{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#reviewTableHead{
+    display: inline;
+}
+
+.vertical-data {
+    writing-mode: vertical-lr
+}
+
+.review-tr {
+    text-align: center;
+}
+
+.slidecontainer {
+    width: 50%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #A9A9A9;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
 }
 .review-tr{
     text-align: center;
@@ -282,13 +313,31 @@ ol{
     cursor: pointer;
 }
 
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #161616;
+    cursor: pointer;
+}
 
-#back{
+.slider::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #161616;
+    cursor: pointer;
+}
+
+
+#back {
     margin-left: 0;
     background-color: white;
 }
 
-#navbar{
+#navbar {
     background-color: darkgray;
     height: 70px;
 }
@@ -308,34 +357,43 @@ ol{
     float: right;
 }
 
+#userEmail{
+    color: black;
+}
+
 #nav_left{
     margin-left: 15px;
 }
 
-#searchType{
+#searchType {
     margin: 10px;
 }
 
-
-#navbar_right{
+#rightNavigation{
     position: absolute;
-    right: 25px;
-    margin-top: 10px;
+    right: 40px;
+    margin-top: -5px;
 }
 
-#carousel{
+/*#navbar_right{*/
+/*    position: absolute;*/
+/*    right: 25px;*/
+/*    margin-top: 5px;*/
+/*}*/
+
+#carousel {
     width: 50%;
     height: 250px;
 }
 
-.user{
+.user {
     display: inline;
     text-decoration: black;
     margin-left: 10px;
     margin-right: 10px;
 }
 
-#memberInfo{
+#memberInfo {
     color: darkgrey;
 }
 
@@ -356,7 +414,7 @@ ol{
 }
 
 
-#pagebox{
+#pagebox {
     width: 95%;
 }
 
@@ -370,27 +428,27 @@ ol{
     font-size: 1.0em;
 }
 
-.component{
+.component {
     text-align: center;
 }
 
-#component_img{
+#component_img {
     width: 300px;
     height: 400px;
     margin: 15px 15px 15px -10px;
 }
 
-#component_info{
+#component_info {
     text-align: center;
     margin-left: 40px;
 }
 
-#component_name{
+#component_name {
     display: block;
     text-align: center;
 }
 
-#catetitle{
+#catetitle {
     margin-left: 360px;
     text-align: center;
     width: 50%;
@@ -406,34 +464,34 @@ ol{
     display: block;
 }
 
-#imgbox{
+#imgbox {
     width: 400px;
     height: 400px;
     margin: 20px;
     margin-bottom: 50px;
 }
 
-#nowimg{
+#nowimg {
     width: 400px;
     height: 500px;
 }
 
-#product_info{
+#product_info {
     width: 450px;
 }
 
-#brandinfo, #codeinfo{
+#brandinfo, #codeinfo {
     display: inline;
 }
 
-#imgboxs_mini{
+#imgboxs_mini {
     text-align: center;
     width: 400px;
     height: 40px;
     margin-top: 130px;
 }
 
-.imgbox_mini{
+.imgbox_mini {
     width: 40px;
     height: 40px;
     display: inline;
@@ -441,7 +499,7 @@ ol{
     padding: 7px;
 }
 
-.mini{
+.mini {
     width: 40px;
     height: 40px;
     border: 1px solid lightgrey;
@@ -455,15 +513,31 @@ ol{
     margin-right: 5%;
 }
 
-#product_img{
+.color_box {
+    text-align: center;
+}
+
+.color_square {
+    width: 35px;
+    height: 35px;
+    margin-right: 5%;
+}
+
+.color_box {
+    text-align: center;
+}
+
+.color_square {
+    width: 35px;
+    height: 35px;
+    margin-right: 5%;
+}
+
+#product_img {
     margin-right: 20px;
 }
 
-#codybox{
-    margin-right: 20px;
-}
-
-#cody_info{
+#cody_info {
     width: 450px;
     text-align: center;
     margin-left: 5%;
@@ -477,15 +551,15 @@ ol{
     text-align: left;
 }
 
-#ic-like{
+#ic-like {
     display: inline;
 }
 
-#likecount{
+#likecount {
     display: inline;
 }
 
-#likeinfo{
+#likeinfo {
     display: inline;
 }
 
@@ -495,7 +569,7 @@ ol{
     margin-left: 10%;
 }
 
-#likeitem_div{
+#likeitem_div {
     padding-left: 80px;
     padding-right: 80px;
 }
@@ -505,7 +579,7 @@ ol{
     margin-bottom: 20px;
 }
 
-#likeitem_imgbox{
+#likeitem_imgbox {
     display: inline;
     margin: 15px;
     width: 210px;
@@ -514,32 +588,32 @@ ol{
 
 }
 
-#likeitem_img{
+#likeitem_img {
     margin-left: 60px;
     display: block;
     border: 1px solid darkgrey;
     border-radius: 100px;
     width: 200px;
-    height:200px;
+    height: 200px;
     text-align: center;
 }
 
-#likeitem_info{
+#likeitem_info {
     text-align: left;
     width: 210px;
 }
 
-#likeitem_name{
+#likeitem_name {
     margin-top: 15px;
     margin-left: 60px;
     width: 50px;
 }
 
-#likeitem_price{
+#likeitem_price {
     margin-left: 60px;
 }
 
-#buyandcartbtn{
+#buyandcartbtn {
     margin-top: 20px;
 }
 
@@ -550,23 +624,23 @@ ol{
     margin-right: 10px;
 }
 
-#cartbtn{
+#cartbtn {
     display: inline;
     padding: 10px;
 }
 
-#cartform{
+#cartform {
     margin-top: 5px;
     display: inline;
 }
 
-#cart_table{
+#cart_table {
     text-align: center;
     width: 70%;
     margin-left: 15%;
 }
 
-#cart_minus{
+#cart_minus {
     display: inline;
 }
 
@@ -575,21 +649,21 @@ ol{
     background: none;
 }
 
-#minus_icon{
+#minus_icon {
     background: none;
 }
 
-#like, #wr-review{
+#like, #wr-review {
     padding: 10px;
 }
 
 
-#codybox{
+#codybox {
     text-align: center;
     display: inline;
 }
 
-.cody{
+.cody {
     display: inline;
     text-align: center;
     border: 1px solid grey;
@@ -603,11 +677,11 @@ ol{
     text-align: center;
 }
 
-#wishlist_table_box{
+#wishlist_table_box {
     text-align: center;
 }
 
-#wishlist_table{
+#wishlist_table {
     margin-left: 21%;
     text-align: center;
     width: 800px;
@@ -625,6 +699,83 @@ ol{
     height: 300px;
 }
 
+
+.codyContainer {
+    text-align: center;
+    height: 900px;
+    display: inline;
+}
+
+
+.codyArea {
+    class: row;
+    position: relative;
+    height: 400px;
+    width: 400px;
+    background-color: #F8EAC3;
+    border: solid 1px darkgrey;
+    border-radius: 200px;
+}
+
+
+.bottomCody {
+    position: absolute;
+    top: 20px;
+    left: 160px;
+    width: 60%;
+}
+
+.topCody {
+    position: absolute;
+    top: 20px;
+    left: 35px;
+    width: 50%;
+}
+
+.outerCody {
+    position: absolute;
+    top: 120px;
+    left: 95px;
+    width: 50%;
+}
+
+.shoesCody {
+    position: absolute;
+    top: 245px;
+    left: 215px;
+    width: 30%;
+}
+
+.accCody {
+    position: absolute;
+    top: 210px;
+    left: 10px;
+    width: 30%;
+}
+
+/*올빼미캐러셀 네비*/
+.owl-nav, .owl-dots {
+    display: block;
+    text-align: center;
+}
+
+.owl-nav .owl-prev, .owl-nav .owl-next {
+    display: inline-block;
+    margin: 5px;
+}
+
+.owl-dots .owl-dot {
+    display: inline-block;
+    background-color: #ccc;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin: 5px;
+}
+
+.owl-dots .active {
+    background-color: #666;
+}
 .likeList{
     text-align: center;
 }
@@ -665,4 +816,34 @@ ol{
     border-radius: 20px;
     background-color: lemonchiffon;
     color: black;
+}
+
+#loadWeather{
+    font-size: 2.5rem;
+}
+
+
+#loadWeatherIcon{
+    margin-bottom: 25px;
+}
+
+
+#recommendDiv{
+    margin-top: 70px;
+}
+
+#carousel1, #carousel2, #carousel3{
+    width: 500px;
+    height: 600px;
+}
+
+#carouselExampleIndicators{
+    margin-left: 10%;
+    width: 80%;
+    text-align: center;
+}
+
+.carousel-inner{
+    /*width: 60%;*/
+    /*height: 350px;*/
 }
