--- a/src/main/resources/templates/common_fragments.html
+++ b/src/main/resources/templates/common_fragments.html
@@ -3,7 +3,8 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"> <!--CDN 링크 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <!--CDN 링크 -->
 </head>
 
 <!-- fragment 선언 -->
@@ -13,9 +14,9 @@
 
     <!-- main Container -->
     <div class="py-1 text-center" id="headlogo">
-        <p><br/><h1 id="logo">Daily <br/>Closet!</h1></p>
+        <p><br/>
+        <h1 id="logo">Daily <br/>Closet!</h1></p>
     </div>
-
 
 
     <!-- navigation bar -->
@@ -25,19 +26,8 @@
         </div>
 
 
-        <!-- nav에 item 넣기 -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
             <ul class="navbar-nav mr-auto" id="nav_left">
-
-                <!--                <li class="nav-item">-->
-                <!--                    <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()"><h5>Logout</h5></a>-->
-                <!--                </li> -> logout을 li가 아닌 form으로 구현-->
-
-                <!-- 컨트롤러 완성 ~ ajax-->
-                <!-- sort=name 수정하기 -->
-                <!-- 페이징, 정렬 조건 변경하려면 아래 쿼리스트링만 수정하면 하면 된다. -->
-                <!-- http://localhost:8080/itemList?categoryName=%EC%83%81%EC%9D%98&page=0&limit=20 -->
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/itemList(categoryName='best',page=0,limit=20,sort='name')}">BEST</a>
                 </li>
@@ -55,77 +45,72 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/itemList(categoryName='신발_스니커즈',page=0,limit=20,sort='name')}">Shoes</a>
+                    <a class="nav-link"
+                       th:href="@{/itemList(categoryName='신발_스니커즈',page=0,limit=20,sort='name')}">Shoes</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/itemList(categoryName='가방_여성가방',page=0,limit=20,sort='name')}">Acc</a>
+                    <a class="nav-link"
+                       th:href="@{/itemList(categoryName='가방_여성가방',page=0,limit=20,sort='name')}">Acc</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/memberInfo}" sec:authorize="isAuthenticated()" th:text="${#authentication?.name}"></a>
-                    <!--                    <input type="hidden" id="current_user" value='${#authentication.name}'>-->
+                    <a id="navp_right" class="nav-link" th:href="@{/daily-recommend}"
+                       sec:authorize="!isAuthenticated()">Weather</a>
                 </li>
-
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/login}" sec:authorize="!isAuthenticated()">Login</a>
+                    <a id="navp_right" class="nav-link" th:href="@{/daily-recommend}" sec:authorize="isAuthenticated()">Weather</a>
                 </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/signup}" sec:authorize="!isAuthenticated()">Sign up</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/weather/index}" sec:authorize="isAuthenticated()">
-                        <i class="fas fa-cloud"></i>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/cart/list}" sec:authorize="isAuthenticated()">
-                        <i class="fas fa-shopping-cart"></i>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/store/like-list}" sec:authorize="isAuthenticated()">
-                        <i class="fas fa-heart"></i>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/cody}" th:method="get" sec:authorize="isAuthenticated()">
-                        <i class="fas fa-tshirt"></i>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/notice}">
-                        <i class="fas fa-question-circle"></i>
-                    </a>
-                </li>
-
-                <form class="form-inline" th:action="@{/logout}" th:method="post" >
-                    <button type="submit" class="nav-link" sec:authorize="isAuthenticated()">Logout</button>
-                </form>
 
             </ul>
-        </div>
 
-        <div class="collapse navbar-collapse" id="navbar_right">
 
-            <!-- 재우 -->
-            <!-- Search bar -->
-            <form class="form-inline my-2 my-lg-0" th:action="@{/itemList}" th:method="get">
-                <select id="searchType" name="searchType">
-                    <option th:value="item_all" >Category</option>
-                    <option th:value="item_name">Product name</option>
-                    <option th:value="brand_name" >Brand</option>
+            <div id="rightNavigation">
+                <ul class="navbar-nav mr-auto">
 
-                </select>
-                <input class="form-control mr-sm-2" name="keyword" id="keyword" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">search</button>
-            </form>
+                    <li class="nav-item">
+                        <a class="nav-link" id="userEmail" th:href="@{/memberInfo}" sec:authorize="isAuthenticated()"
+                           th:text="${#authentication?.name}"></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/login}" sec:authorize="!isAuthenticated()">Login</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/signup}" sec:authorize="!isAuthenticated()">Sign up</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a id="navp" class="nav-link" th:href="@{/cart/list}" sec:authorize="isAuthenticated()">
+                            <i class="fas fa-shopping-cart"></i>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/store/like-list}" sec:authorize="isAuthenticated()">
+                            <i class="fas fa-heart"></i>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/cody}" th:method="get" sec:authorize="isAuthenticated()">
+                            <i class="fas fa-tshirt"></i>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/notice}">
+                            <i class="fas fa-question-circle"></i>
+                        </a>
+                    </li>
+
+                    <form class="form-inline" th:action="@{/logout}" th:method="post">
+                        <button type="submit" class="nav-link" sec:authorize="isAuthenticated()">Logout</button>
+                    </form>
+                </ul>
+            </div>
+
         </div>
     </nav>
 
@@ -136,12 +121,12 @@
 </div>
 
 
-
 <!-- footer -->
-<div id="footer" th:fragment="footer" class="jumbotron text-center bg-white banner" style="margin-bottom: 0">
+<div id="footer" th:fragment="footer" class="jumbotron text-center bg-white banner" style="margin-bottom: 0; background-color: darkgray;">
 
-
+    <br><br>
     <xs>&copy;2021. Daily Closet. All Rights Reserved.</xs>
+    <br>
 </div>
 
 </html>
