--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -13,6 +13,22 @@
     <div class="py-`5` ml-2">
         <p>main page</p>
     </div>
+
+    <div class="collapse navbar-collapse" id="navbar_right">
+        <form class="form-inline my-2 my-lg-0" th:action="@{/itemList}" th:method="get">
+
+            <select id="searchType" name="searchType">
+                <option th:value="item_all">Category</option>
+                <option th:value="item_name">Product name</option>
+                <option th:value="brand_name">Brand</option>
+            </select>
+
+            <input class="form-control mr-sm-2" name="keyword"
+                   id="keyword" type="search" placeholder="Search"
+                   aria-label="Search">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">search</button>
+        </form>
+    </div>
 </div>
 
 </html>
