--- a/src/main/resources/templates/view/cody.html
+++ b/src/main/resources/templates/view/cody.html
@@ -87,7 +87,7 @@
                         <input type="range" min="1" max="65" value="60" class="slider" id="outerRange"
                                style="display: none" onchange="changeSize(this.id, this.value)">
                         <input type="range" min="1" max="85" value="50" class="slider" id="topRange"
-                               style="display: none" onchange="changeSize(this.id, this.value)">
+                               onchange="changeSize(this.id, this.value)">
                         <input type="range" min="1" max="75" value="50" class="slider" id="bottomRange"
                                style="display: none" onchange="changeSize(this.id, this.value)">
                         <input type="range" min="1" max="45" value="30" class="slider" id="shoesRange"
@@ -97,12 +97,20 @@
 
                     </div>
                 </div>
+                <br><br>
+                <div class="row">
+                    <input type="button" th:id="submit_btn" class="btn btn-light" value="Save" style="width:200px">&nbsp&nbsp
+                    <input  type="button" th:id="submit_btn" class="btn btn-light" value="Reset" style="width:200px">
+                </div>
+                <br>
 
                 <div class="row">
-                    <input type="button" th:id="submit_btn" class="btn btn-light" value="Save">&nbsp&nbsp
                     <input type="button" th:id="myCody_btn" class="btn btn-light" value="My Cody List"
-                           th:onclick="location.href='/codyList'">
+                           th:onclick="location.href='/codyList'" style="width:200px">&nbsp&nbsp
+                    <input type="button" th:id="myCody_btn" class="btn btn-light" value="Other Cody List"
+                           th:onclick="location.href='/allCodyList'" style="width:200px">
                 </div>
+
             </div>
 
         </div>
@@ -129,7 +137,7 @@
         </div>
 
         <!--                상의-->
-        <div class="likeList" id="topList" style="display: none">
+        <div class="likeList" id="topList">
             <li th:if="${topList.size()== 0}">Add Top List</li>
             <div class="owl-carousel" style="text-align: center">
                 <div class="col" th:each="item:${topList}">
