--- a/src/main/resources/templates/cody_fragment.html
+++ b/src/main/resources/templates/cody_fragment.html
@@ -9,7 +9,7 @@
         <div th:each="cody:${codyList}">
             <div class="codybox">
                 <div class="col-5">
-                    <div class="codyArea" th:style="'background-color:'+${cody.getBackgroundId()}">
+                    <div class="codyArea_carousel" th:style="'background-color:'+${cody.getBackgroundId()}">
                         <!--                               하의-->
                         <div class="col" style="position: absolute">
                             <img th:class="bottomCody"
