--- a/src/main/resources/templates/view/allCodyList.html
+++ b/src/main/resources/templates/view/allCodyList.html
@@ -14,7 +14,7 @@
             <!--                코디박스-->
             <div class="col-3 justify-content-center py-5" th:each="cody:${codyList}"
                  style="margin-right: 50px; margin-bottom: 100px;">
-                <div class="codyArea" th:style="'background-color:'+${cody.getBackgroundId()}"
+                <div class="codyArea_carousel" th:style="'background-color:'+${cody.getBackgroundId()}"
                      style="position: relative;">
                     <!--                               하의-->
                     <div class="col" style="position: absolute">
