--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" th:href="@{/css/user/style.css}">
 </th:block>
 
-<div layout:fragment="content" class="container" style="background-color: white;">
+<div layout:fragment="content" class="container justify-content-center py-5" style="background-color: white;">
+
 
     <!--    Today's Weather-->
     <th:block th:insert="weather_fragment :: weather()"/>
 
+    <!--    Today's Weather-->
+    <th:block th:insert="search_fragment :: search()"/>
 
     <!--    Cody Carosel-->
     <th:block th:insert="cody_fragment :: cody(${codyList})"/>
