--- a/src/main/resources/templates/search_fragment.html
+++ b/src/main/resources/templates/search_fragment.html
@@ -5,8 +5,8 @@
 
 <div th:fragment="search()">
 
-    <div class="row justify-content-center py-5">
-        <form class="form-inline my-2 my-lg-0" th:object="${searchForm}" th:action="@{/searchList}" th:method="get">
+    <div class="row">
+        <form class="form-inline my-2 my-lg-0 justify-content-center py-5" th:object="${searchForm}" th:action="@{/searchList}" th:method="get">
             <select id="searchType" name="searchType" th:attr="name='option'">
                 <option th:value="item_all" >Category</option>
                 <option th:value="item_name">Product name</option>
