--- a/src/main/resources/templates/cody_fragment.html
+++ b/src/main/resources/templates/cody_fragment.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<div th:fragment="cody(codyList)">
+<div th:fragment="cody(codyList)" class="container">
 
     <div class="owl-carousel" style="position: relative">
         <div th:each="cody:${codyList}">
@@ -52,8 +52,6 @@
     </div>
 
     <br><br><br>
-    <hr>
-
 
     <script type="text/javascript">
 
