--- a/src/main/resources/templates/recommend_fragment.html
+++ b/src/main/resources/templates/recommend_fragment.html
@@ -5,10 +5,10 @@
 
 <div th:fragment="recommend(top, outer, bottom)">
 
-    <div class="container">
+    <div class="container justify-content-center py-5">
         <div class="row">
             <h1></h1>
-            <div class="col-md-6">
+            <div class="col-md-6 justify-content-center py-5">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="width: 400px;">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6  justify-content-center py-5">
 
                 <h2 style="text-align: left">
                     날씨 분석을 통한 </br>
