--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -24,7 +24,7 @@
     </div>
 
 
-    <div class="row justify-content-center py-5" style="background-color: #A0A19D;height: 700px;">
+    <div class="row justify-content-center py-5" style="background-color:#F8F7F5;height: 700px;">
         <!— Recommend—>
         <th:block th:insert="recommend_fragment :: recommend(${top},${outer},${bottom})"/>
     </div>
