--- a/src/main/resources/templates/common_fragments.html
+++ b/src/main/resources/templates/common_fragments.html
@@ -29,29 +29,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto" id="nav_left">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/itemList(categoryName='best',page=0,limit=20,sort='name')}">BEST</a>
+                    <a class="nav-link" th:href="@{/itemList(categoryName='best',page=1,limit=20)}">BEST</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/itemList(categoryName='아우터',page=0,limit=20,sort='name')}">Outer</a>
+                    <a class="nav-link" th:href="@{/itemList(categoryName='아우터',page=1,limit=20,sort='name')}">Outer</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/itemList(categoryName='상의',page=0,limit=20,sort='name')}">Top</a>
+                    <a class="nav-link" th:href="@{/itemList(categoryName='상의',page=1,limit=20,sort='name')}">Top</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/itemList(categoryName='바지',page=0,limit=20,sort='name')}">Bottom</a>
+                    <a class="nav-link" th:href="@{/itemList(categoryName='바지',page=1,limit=20,sort='name')}">Bottom</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link"
-                       th:href="@{/itemList(categoryName='신발_스니커즈',page=0,limit=20,sort='name')}">Shoes</a>
+                    <a class="nav-link" th:href="@{/itemList(categoryName='신발_스니커즈',page=1,limit=20,sort='name')}">Shoes</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link"
-                       th:href="@{/itemList(categoryName='가방_여성가방',page=0,limit=20,sort='name')}">Acc</a>
+                    <a class="nav-link" th:href="@{/itemList(categoryName='가방_여성가방',page=1,limit=20,sort='name')}">Acc</a>
                 </li>
 
                 <li class="nav-item">
@@ -157,12 +155,11 @@
 
 
 <!-- footer -->
-<div id="footer" th:fragment="footer" class="jumbotron text-center bg-white banner"
-     style="margin-bottom: 0; background-color: darkgray;">
+<div id="footer" th:fragment="footer" class="jumbotron text-center banner"
+     style="margin-bottom: 0;">
 
-    <br><br>
     <xs>&copy;2021. Daily Closet. All Rights Reserved.</xs>
-    <br>
+
 </div>
 
 </html>
