--- a/src/main/resources/templates/view/category.html
+++ b/src/main/resources/templates/view/category.html
@@ -13,12 +13,40 @@
     <br/>
     <div class="py-`5` ml-2" id="pagebox">
         <div id="catetitle">
-            <!-- -->
-<!--            <h2 th:text="This is ${title} Page."><h2>-->
+
+<!--            <h2 th:text="This is ${categoryName} Page.">-->
+<!--            </h2>-->
         </div>
 
         <th:block th:insert="item_fragements :: item_list(${itemList})"/>
     </div>
+    <!— 페이징 뷰 —>
+    <div class="row" th:if="${pageInfo ne null}">
+        <div class="col-12">
+            <ul class="pagination pagination justify-content-center">
+                <li class="page-item" th:classappend="${!pageInfo.isPrevExist} ? disabled">
+                    <a class="page-link" href="#" th:href="${pageInfo.isPrevExist ? '/itemList?'
+                    + 'categoryName=' + categoryName
+                    + '&limit=' + pageInfo.postsPerPage
+                    + '&page=' + (pageInfo?.pageList[0] - 1) : ''}">&laquo;</a>
+                </li>
+                <li th:each="num: ${pageInfo.pageList}" class="page-item"
+                    th:classappend="${pageInfo.currentPageNum eq num} ? active">
+                    <a class="page-link" href="#" th:href="${'/itemList?'
+                    + 'categoryName=' + categoryName
+                    + '&limit=' + pageInfo.postsPerPage
+                    + '&page=' + num}" th:text="${num}"></a>
+                </li>
+                <li class="page-item" th:classappend="${!pageInfo.isNextExist} ? disabled">
+                    <a class="page-link" href="#" th:href="${pageInfo.isNextExist ? '/itemList?'
+                    + 'categoryName=' + categoryName
+                    + '&limit=' + pageInfo.postsPerPage
+                    + '&page=' + (pageInfo?.pageList[0] + 5) : ''}">&raquo;</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </div>
 
 </html>
