--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -7,6 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 
 * {
     margin: 0;
@@ -166,6 +168,8 @@ ol{
     text-align: center;
     margin-left: 12%;
 }
+
+
 
 .mb-2{
     text-align: center;
@@ -374,12 +378,6 @@ ol{
     right: 40px;
     margin-top: -5px;
 }
-
-/*#navbar_right{*/
-/*    position: absolute;*/
-/*    right: 25px;*/
-/*    margin-top: 5px;*/
-/*}*/
 
 #carousel {
     width: 50%;
@@ -714,8 +712,16 @@ ol{
     width: 400px;
     background-color: #F8EAC3;
     border: solid 1px darkgrey;
-    border-radius: 200px;
 }
+
+.codyArea_carousel {
+    class: row;
+    position: relative;
+    height: 400px;
+    width: 400px;
+    background-color: #F8EAC3;
+}
+
 
 
 .bottomCody {
@@ -798,6 +804,37 @@ ol{
     margin-left: 20%;
 }
 
+#full_address{
+    font-family: "Noto Sans KR", "Lucida Grande", "Lucida Sans", Tahoma, Verdana, sansserif;
+    font-size: 2.2rem;
+}
+
+#loadWeather{
+    color: black;
+    font-family: "Noto Sans KR", "Lucida Grande", "Lucida Sans", Tahoma, Verdana, sansserif;
+    font-size: 3.0rem;
+}
+
+#loadWeatherIcon{
+    margin-left: 6%;
+    margin-top: 10%;
+    text-align: center;
+    width: 250px;
+    height: 250px;
+}
+
+#weatherFragDiv{
+    margin-top: 5%;
+}
+
+#weatherIconDiv{
+    margin-left: 10%;
+}
+
+#weatherInfoDiv{
+    text-align: left;
+}
+
 
 #city{
     height: 33px;
@@ -818,10 +855,6 @@ ol{
     color: black;
 }
 
-#loadWeather{
-    font-size: 2.5rem;
-}
-
 
 #loadWeatherIcon{
     margin-bottom: 25px;
@@ -832,9 +865,23 @@ ol{
     margin-top: 70px;
 }
 
+
+
 #carousel1, #carousel2, #carousel3{
-    width: 500px;
-    height: 600px;
+    width: 400px;
+    height: 500px;
+}
+
+#carouselDiv{
+    /*text-align: center;*/
+    margin-left: 7%;
+    width: 700px;
+    height: 800px;
+}
+
+.carouselImg{
+    width: 400px;
+    height: 500px;
 }
 
 #carouselExampleIndicators{
@@ -845,5 +892,4 @@ ol{
 
 .carousel-inner{
     /*width: 60%;*/
-    /*height: 350px;*/
 }
