--- a/src/main/resources/templates/item_fragements.html
+++ b/src/main/resources/templates/item_fragements.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html lang="ko"
+<html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout" th:with="title='Cody Page'">
 
 <div th:fragment="item_list(itemList)">
     <div class="row" style="text-align: center; margin-bottom: 100px;">
@@ -9,10 +9,10 @@
             <div class="component">
                 <img id="component_img" th:src="${item.urls.get(0)}">
                 <div id="component_info">
-                    <p id="component_name" th:text="${item.name}"></p>
+                    <p class="component_name" th:text="${item.name}" style="text-overflow: ellipsis;overflow:hidden; font-size: 15px; width:200px; white-space:nowrap;"></p>
                     <hr>
-                    <p id="component_name" th:text="${item.brand}"></p>
-                    <p id="component_price">₩<span th:text="${#numbers.formatInteger(item.price, 3,'COMMA')}"></span></p>
+                    <p class="component_name" th:text="${item.brand}" style="text-overflow: ellipsis;overflow:hidden; font-size: 18px; width:200px; white-space:nowrap; font-weight:bold;"></p>
+                    <p id="component_price">₩<span th:text="${#numbers.formatInteger(item.price, 3,'COMMA')}" style="ont-size: 18px;"></span></p>
                     <a th:href="@{/store/detail/{id}(id=${item.id})}" class="btn btn-light stretched-link">see more</a>
                 </div>
 
