--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -8,27 +8,19 @@
     <link rel="stylesheet" th:href="@{/css/user/style.css}">
 </th:block>
 
-<div layout:fragment="content" class="container" style="background-color: white;">
-    <br/><br/>
-    <div class="py-`5` ml-2">
-        <p>main page</p>
-    </div>
+<div layout:fragment="content" class="container" >
 
-    <div class="collapse navbar-collapse" id="navbar_right">
-        <form class="form-inline my-2 my-lg-0" th:action="@{/itemList}" th:method="get">
+    <!--    Today's Weather-->
+    <th:block th:insert="weather_fragment :: weather()"/>
 
-            <select id="searchType" name="searchType">
-                <option th:value="item_all">Category</option>
-                <option th:value="item_name">Product name</option>
-                <option th:value="brand_name">Brand</option>
-            </select>
 
-            <input class="form-control mr-sm-2" name="keyword"
-                   id="keyword" type="search" placeholder="Search"
-                   aria-label="Search">
-            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">search</button>
-        </form>
-    </div>
+    <!--    Cody Carosel-->
+    <th:block th:insert="cody_fragment :: cody(${codyList})"/>
+
+    <!--    Recommend-->
+    <th:block th:insert="recommend_fragment :: recommend(${top},${outer},${bottom})"/>
+
+
 </div>
 
 </html>
